// Copyright 2019 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

syntax = "proto3";
package kwbase.sql.execpb;
option go_package = "execpb";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "sql/rowexec/stats.proto";

// VectorizedStats represents the stats collected from an operator.
message VectorizedStats {
  int32 id = 1 [(gogoproto.customname) = "ID"];
  int64 num_batches = 2;
  int64 num_tuples = 3;
  google.protobuf.Duration time = 4 [(gogoproto.nullable) = false,
                                  (gogoproto.stdduration) = true];
  // stall indicates whether stall time or execution time is being tracked.
  bool stall = 5;
  int64 max_allocated_mem = 6;
  int64 max_allocated_disk = 7;
  kwbase.sql.distsqlrun.TsInputStats tsInputStats =8 [(gogoproto.nullable) = false];
}
